# marqo-nytimes

./: .gitignore  README.md  README.rst  pyproject.toml
data/: data.xml
marqo_nytimes/: app.py  document.py  download.py  load.py  playground.py
tests/: test_marqo_nytimes.py
