[tool.poetry]
name = "marqo-nytimes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
marqo = "^0.1.15"
aiohttp = "^3.8.3"
aiodns = "^3.0.0"
selectolax = "^0.3.11"
lxml = "^4.9.1"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
